[gd_scene load_steps=14 format=3 uid="uid://due0m87pa8nlk"]

[ext_resource type="Script" path="res://Player/Attack/fireball.gd" id="1_0gb5m"]
[ext_resource type="Texture2D" uid="uid://bavi6du0c6jaf" path="res://Assets/Weapons/MOSH_Fireball-Explosion-Sheet.png" id="1_ntpj1"]
[ext_resource type="Texture2D" uid="uid://ifwy58bb7brq" path="res://Assets/Weapons/MOSH_Fireball.png" id="2_gko5c"]
[ext_resource type="AudioStream" uid="uid://7q1dyjmba1fs" path="res://Audio/fireball_explosion.mp3" id="4_u55ov"]
[ext_resource type="AudioStream" uid="uid://bed52gxfpctjj" path="res://Audio/fireball_throw.mp3" id="4_u62co"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3frx"]
atlas = ExtResource("1_ntpj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s68je"]
atlas = ExtResource("1_ntpj1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7rbf"]
atlas = ExtResource("1_ntpj1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_314br"]
atlas = ExtResource("1_ntpj1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tpdu"]
atlas = ExtResource("1_ntpj1")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7gk7"]
atlas = ExtResource("2_gko5c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pgi1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3frx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s68je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7rbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_314br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tpdu")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7gk7")
}],
"loop": true,
"name": &"fire",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dexmn"]
height = 20.0

[node name="Fireball" type="Area2D" groups=["attack"]]
top_level = true
scale = Vector2(0.1, 0.1)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_0gb5m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pgi1l")
animation = &"explosion"
autoplay = "fire"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.10543e-15, -3.55271e-15)
shape = SubResource("CapsuleShape2D_dexmn")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="snd_throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u62co")
volume_db = -20.0
pitch_scale = 2.0
autoplay = true

[node name="snd_explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u55ov")
volume_db = -15.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="snd_explode" to="." method="_on_snd_explode_finished"]
